--- a/src/styles/base/_normalize.scss
+++ b/src/styles/base/_normalize.scss
@@ -5,18 +5,19 @@
 
 *,
 *::before,
-*::after
-  box-sizing: border-box
+*::after {
+  box-sizing: border-box;
+}
 
 /**
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 
-html
-  line-height: 1.15
-  -webkit-text-size-adjust: 100%
-
+html {
+  line-height: 1.15;
+  text-size-adjust: 100%;
+}
 
 /* Sections
    ========================================================================== */
@@ -25,27 +26,27 @@ html
  * Remove the margin in all browsers.
  */
 
-body
-  margin: 0
-
+body {
+  margin: 0;
+}
 
 /**
  * Render the `main` element consistently in IE.
  */
 
-main
-  display: block
-
+main {
+  display: block;
+}
 
 /**
  * Correct the font size and margin on `h1` elements within `section` and
  * `article` contexts in Chrome, Firefox, and Safari.
  */
 
-h1
-  font-size: 2em
-  margin: 0.67em 0
-
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
 
 /* Grouping content
    ========================================================================== */
@@ -55,21 +56,21 @@ h1
  * 2. Show the overflow in Edge and IE.
  */
 
-hr
-  box-sizing: content-box
-  height: 0
-  overflow: visible
-
+hr {
+  box-sizing: content-box;
+  height: 0;
+  overflow: visible;
+}
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
  * 2. Correct the odd `em` font sizing in all browsers.
  */
 
-pre
-  font-family: monospace, monospace
-  font-size: 1em
-
+pre {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
 
 /* Text-level semantics
    ========================================================================== */
@@ -78,29 +79,29 @@ pre
  * Remove the gray background on active links in IE 10.
  */
 
-a
-  background-color: transparent
-
+a {
+  background-color: transparent;
+}
 
 /**
  * 1. Remove the bottom border in Chrome 57-
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
  */
 
-abbr[title]
-  border-bottom: none
-  text-decoration: underline
-  text-decoration: underline dotted
-
+abbr[title] {
+  border-bottom: none;
+  text-decoration: underline;
+  text-decoration: underline dotted;
+}
 
 /**
  * Add the correct font weight in Chrome, Edge, and Safari.
  */
 
 b,
-strong
-  font-weight: bolder
-
+strong {
+  font-weight: bolder;
+}
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
@@ -109,18 +110,18 @@ strong
 
 code,
 kbd,
-samp
-  font-family: monospace, monospace
-  font-size: 1em
-
+samp {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
 
 /**
  * Add the correct font size in all browsers.
  */
 
-small
-  font-size: 80%
-
+small {
+  font-size: 80%;
+}
 
 /**
  * Prevent `sub` and `sup` elements from affecting the line height in
@@ -128,20 +129,20 @@ small
  */
 
 sub,
-sup
-  font-size: 75%
-  line-height: 0
-  position: relative
-  vertical-align: baseline
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
 
+sub {
+  bottom: -0.25em;
+}
 
-sub
-  bottom: -0.25em
-
-
-sup
-  top: -0.5em
-
+sup {
+  top: -0.5em;
+}
 
 /* Embedded content
    ========================================================================== */
@@ -150,9 +151,9 @@ sup
  * Remove the border on images inside links in IE 10.
  */
 
-img
-  border-style: none
-
+img {
+  border-style: none;
+}
 
 /* Forms
    ========================================================================== */
@@ -166,12 +167,12 @@ button,
 input,
 optgroup,
 select,
-textarea
-  font-family: inherit
-  font-size: 100%
-  line-height: 1.15
-  margin: 0
-
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+}
 
 /**
  * Show the overflow in IE.
@@ -179,9 +180,9 @@ textarea
  */
 
 button,
-input
-  overflow: visible
-
+input {
+  overflow: visible;
+}
 
 /**
  * Remove the inheritance of text transform in Edge, Firefox, and IE.
@@ -189,9 +190,9 @@ input
  */
 
 button,
-select
-  text-transform: none
-
+select {
+  text-transform: none;
+}
 
 /**
  * Correct the inability to style clickable types in iOS and Safari.
@@ -200,9 +201,9 @@ select
 button,
 [type="button"],
 [type="reset"],
-[type="submit"]
-  -webkit-appearance: button
-
+[type="submit"] {
+  appearance: auto;
+}
 
 /**
  * Remove the inner border and padding in Firefox.
@@ -211,10 +212,10 @@ button,
 button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner
-  border-style: none
-  padding: 0
-
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
 
 /**
  * Restore the focus styles unset by the previous rule.
@@ -223,17 +224,17 @@ button::-moz-focus-inner,
 button:-moz-focusring,
 [type="button"]:-moz-focusring,
 [type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring
-  outline: 1px dotted ButtonText
-
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
 
 /**
  * Correct the padding in Firefox.
  */
 
-fieldset
-  padding: 0.35em 0.75em 0.625em
-
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
 
 /**
  * 1. Correct the text wrapping in Edge and IE.
@@ -242,30 +243,30 @@ fieldset
  *    `fieldset` elements in all browsers.
  */
 
-legend
-  box-sizing: border-box
-  color: inherit
-  display: table
-  max-width: 100%
-  padding: 0
-  white-space: normal
-
+legend {
+  box-sizing: border-box;
+  color: inherit;
+  display: table;
+  max-width: 100%;
+  padding: 0;
+  white-space: normal;
+}
 
 /**
  * Add the correct vertical alignment in Chrome, Firefox, and Opera.
  */
 
-progress
-  vertical-align: baseline
-
+progress {
+  vertical-align: baseline;
+}
 
 /**
  * Remove the default vertical scrollbar in IE 10+.
  */
 
-textarea
-  overflow: auto
-
+textarea {
+  overflow: auto;
+}
 
 /**
  * 1. Add the correct box sizing in IE 10.
@@ -273,47 +274,47 @@ textarea
  */
 
 [type="checkbox"],
-[type="radio"]
-  box-sizing: border-box
-  padding: 0
-
+[type="radio"] {
+  box-sizing: border-box;
+  padding: 0;
+}
 
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
 
 [type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button
-  height: auto
-
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
 
 /**
  * 1. Correct the odd appearance in Chrome and Safari.
  * 2. Correct the outline style in Safari.
  */
 
-[type="search"]
-  -webkit-appearance: textfield
-  outline-offset: -2px
-
+[type="search"] {
+  appearance: textfield;
+  outline-offset: -2px;
+}
 
 /**
  * Remove the inner padding in Chrome and Safari on macOS.
  */
 
-[type="search"]::-webkit-search-decoration
-  -webkit-appearance: none
-
+[type="search"]::-webkit-search-decoration {
+  appearance: none;
+}
 
 /**
  * 1. Correct the inability to style clickable types in iOS and Safari.
  * 2. Change font properties to `inherit` in Safari.
  */
 
-::-webkit-file-upload-button
-  -webkit-appearance: button
-  font: inherit
-
+::-webkit-file-upload-button {
+  appearance: auto;
+  font: inherit;
+}
 
 /* Interactive
    ========================================================================== */
@@ -322,17 +323,17 @@ textarea
  * Add the correct display in Edge, IE 10+, and Firefox.
  */
 
-details
-  display: block
-
+details {
+  display: block;
+}
 
 /*
  * Add the correct display in all browsers.
  */
 
-summary
-  display: list-item
-
+summary {
+  display: list-item;
+}
 
 /* Misc
    ========================================================================== */
@@ -341,14 +342,14 @@ summary
  * Add the correct display in IE 10+.
  */
 
-template
-  display: none
-
+template {
+  display: none;
+}
 
 /**
  * Add the correct display in IE 10.
  */
 
-[hidden]
-  display: none
-
+[hidden] {
+  display: none;
+}
