--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,3 @@
-@import 'base/index.scss';
-@import './tooltips.sass';
-@import './shortcuts.sass';
+@use './base/index';
+@use './tooltips';
+@use './shortcuts';
